pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-x-forwarded-prefix-no-rewrite-target.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-x-forwarded-prefix-no-rewrite-target
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/x-forwarded-prefix: "x-forwarded-prefix-header-value"

spec:
  ingressClassName: nginx
  rules:
    - host: x-forwarded-prefix.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
